# r3p-mqtt

./: .gitignore  README.md  config.example.json  pyproject.toml  r3p-mqtt.service
.claude/: settings.local.json
.serena/: project.yml
docs/plans/: 2026-03-09-r3p-mqtt-daemon-design.md
r3p-mqtt/: pyproject.toml
r3p-mqtt/src/r3p_mqtt/: __main__.py  config.py  mqtt.py  scanner.py
r3p-mqtt/src/r3p_mqtt/eflib/: __init__.py  connection.py  devicebase.py
r3p-mqtt/src/r3p_mqtt/eflib/devices/: unsupported.py
src/r3p_mqtt/: __init__.py  __main__.py  mqtt.py  scanner.py
src/r3p_mqtt/eflib/: NOTICE  __init__.py  crc.py  exceptions.py  logging_util.py
src/r3p_mqtt/eflib/devices/: __init__.py
src/r3p_mqtt/eflib/model/: __init__.py
