[project]
name = "r3p-mqtt"
version = "0.1.0"
description = "BLE-to-MQTT telemetry daemon for EcoFlow River 3 Plus"
readme = "README.md"
authors = [
    { name = "tectiv3", email = "git@getpanda.me" }
]
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.1",
    "bleak>=2.1.1",
    "bleak-retry-connector>=4.6.0",
    "crc>=7.1.0",
    "ecdsa>=0.19.1",
    "protobuf>=7.34.0",
    "pycryptodome>=3.23.0",
]

[project.scripts]
r3p-mqtt = "r3p_mqtt.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
